deployments/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: deployer
  labels:
    app.kubernetes.io/part-of: deployer
