deployments/k8s/registry.yml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: deployer
  labels:
    app: registry
    app.kubernetes.io/part-of: deployer
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: registry
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: deployer
  labels:
    app: registry
    app.kubernetes.io/part-of: deployer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
        app.kubernetes.io/part-of: deployer
    spec:
      containers:
        - name: registry
          image: registry:2
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: registry-data
              mountPath: /var/lib/registry
      volumes:
        - name: registry-data
          persistentVolumeClaim:
            claimName: registry-data
